tests/failing/powscl.tail
let v4:[int]0 = prSclI(powerScl(fn v2:[int]0 => addi(v2,1),3,100)) in
0.00
